source/blender/gpu/GPU_context.h
@@ -17,6 +17,7 @@
 extern "C" {
 #endif
 
+bool GPU_backend_init_once(void);
 void GPU_backend_init(eGPUBackendType backend);
 void GPU_backend_exit(void);
 bool GPU_backend_supported(eGPUBackendType type);
